[project]
name = "wechat-id-pull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
